--- a/bip39coder.html
+++ b/bip39coder.html
@@ -1022,5 +1022,19 @@ function clearAllInputs() {
   </div>
 </div>
 
+<!-- Python CLI Info -->
+<div style="background:#fff3cd;border-left:4px solid #ffc107;padding:12px 15px;margin:20px 0;border-radius:4px;">
+  <strong>💻 Command Line Version Available:</strong> For advanced users, a Python CLI version (<code>bip39coder.py</code>) is also included in this repository.
+  <br><br>
+  <strong>Usage:</strong>
+  <br>• <code>python bip39coder.py</code> - Interactive mode with live word suggestions
+  <br>• <code>python bip39coder.py [98+ dice rolls]</code> - Generate from dice (e.g., <code>python bip39coder.py 123456...</code>)
+  <br>• <code>python bip39coder.py [Base58 string]</code> - Decrypt encrypted seed
+  <br><br>
+  <strong>Requirements:</strong> Python 3.6+ and <code>base58</code> library (<code>pip install base58</code>)
+  <br>
+  <strong>Note:</strong> The web version (this page) works completely offline without any installation.
+</div>
+
 </body>
 </html>
