Replace 'other' with 'peasant' in word list

--- a/bip39coder.html
+++ b/bip39coder.html
@@ -187,7 +187,7 @@ const WORDS = [
 "outside","oval","oven","over","own","owner","oxygen","oyster","ozone","pact",
 "paddle","page","pair","palace","palm","panda","panel","panic","panther","paper",
 "parade","parent","park","parrot","party","pass","patch","path","patient","patrol",
-"pattern","pause","pave","payment","peace","peanut","pear","pelican","pen","penalty",
+"pattern","pause","pave","payment","peace","peanut","pear","peasant","pelican","pen","penalty",
 "pencil","people","pepper","perfect","permit","person","pet","phone","photo","phrase",
 "physical","piano","picnic","picture","piece","pig","pigeon","pill","pilot","pink",
 "pioneer","pipe","pistol","pitch","pizza","place","planet","plastic","plate","play",
